fix(main-view): layout issues

--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -17,8 +17,3 @@
         overflow: hidden;
     }
 }
-
-// https://github.com/angular-split/angular-split/issues/224
-.as-split-gutter {
-    height: revert !important;
-}
